fix(dedicated): fix iplist horizontal scroll
  ref: MANAGER-13467

--- a/packages/manager/apps/dedicated/client/app/ip/components/list/list.styles.scss
+++ b/packages/manager/apps/dedicated/client/app/ip/components/list/list.styles.scss
@@ -4,4 +4,9 @@
       display: none;
     }
   }
+
+  #module-ip-table {
+    display: block;
+    overflow-x: auto;
+  }
 }
